--- a/src/Components/Home/Herosection.css
+++ b/src/Components/Home/Herosection.css
@@ -4,6 +4,7 @@
     height: 550px;
     padding: 0 60px;
     background-color: black;
+    margin-top: 30px;
     color: white;
 }
 .hero_section div{
